fix: align url button

--- a/styles/linter-ui.less
+++ b/styles/linter-ui.less
@@ -56,6 +56,7 @@
 
       // align button with message
       .linter-buttons-right {
+        margin-top: 5px; // TODO align
         margin-left: 10px;
         float: right;
 
